--- a/source/styles/iubenda/_iubenda-dc-custom-v7.scss
+++ b/source/styles/iubenda/_iubenda-dc-custom-v7.scss
@@ -26,7 +26,7 @@
 /* Banner & Floating preferences button surface */
 .iubenda-cs-content,
 .iubenda-tp-btn {
-    background-color: var(--theme--background);
+    background-color: var(--theme--text);
     box-shadow: 0 0 12px 0 var(--theme--border);
     border: var(--iub-border) !important;
 }
@@ -34,10 +34,11 @@
 
 /* Banner wrapper */
 .iubenda-cs-content {
-    max-width: 18rem;
+    max-width: 20rem;
     margin: var(--iubenda--banner-margin);
     padding: 1rem 1.25rem 0.5rem;
     border-radius: var(--radius--small);
+    color: var(--theme--background);
 
     @include landscape-down {
         max-width: 100%;
