changes to iubenda custom to allow for custom banner html

--- a/source/styles/dc/_theme.scss
+++ b/source/styles/dc/_theme.scss
@@ -29,8 +29,8 @@
 	/* Navbar */
 	--navbar--background: var(--swatch--light-1);
 	/* text links */
-	// --text-link--text: var(--swatch--dark-1);
-	// --text-link--text-hover: var(--swatch--brand);
+	--text-link--text: var(--swatch--dark-1);
+	--text-link--text-hover: var(--swatch--brand);
 
 	/* theme toggle icon  */
 	#themeToggle {
@@ -81,8 +81,8 @@
 	/* Navbar */
 	--navbar--background: var(--swatch--dark-1);
 	/* text links */
-	// --text-link--text: var(--swatch--light-1);
-	// --text-link--text-hover: var(--swatch--brand);
+	--text-link--text: var(--swatch--light-1);
+	--text-link--text-hover: var(--swatch--brand);
 
 	/* theme toggle icon  */
 	#themeToggle {    
