--- a/source/styles/iubenda/_iubenda-dc-custom-v8.scss
+++ b/source/styles/iubenda/_iubenda-dc-custom-v8.scss
@@ -49,6 +49,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    grid-column-gap: var(--space--small);
 }
 
 /* Banner text area */
@@ -68,8 +69,8 @@
     width: 100%;
     margin-top: 1rem;
     flex-direction: column;
-    grid-column-gap: var(--space--xsmall);
-    grid-row-gap: var(--space--xsmall);
+    grid-column-gap: var(--space--small);
+    grid-row-gap: var(--space--small);
 }
 
 /* Banner Accept and Reject buttons wrapper */
@@ -105,6 +106,7 @@
 
     // Banner Preferences button
     .iubenda-cs-customize-btn {
+        width: 100%;
         // padding: .25rem 0rem .5rem;
         // flex-grow: 1;
         // flex-shrink: 1;
