--- a/source/styles/iubenda/_iubenda-dc-custom-v8.scss
+++ b/source/styles/iubenda/_iubenda-dc-custom-v8.scss
@@ -261,7 +261,7 @@
                 border-color: var(--swatch--process--success) !important;
 
                 &:hover {
-                    background-image: url("data:image/svg+xml,%3C%3Fxml version='1.0'%3F%3E%3Csvg xmlns='http://www.w3.org/2000/svg' enable-background='new 0 0 515.556 515.556' height='512px' viewBox='0 0 515.556 515.556' width='512px' class=''%3E%3Cg%3E%3Cpath d='m0 274.226 176.549 176.886 339.007-338.672-48.67-47.997-290.337 290-128.553-128.552z' data-original='%23ffffff' class='active-path' data-old_color='%23ffffff' fill='%23ffffff'/%3E%3C/g%3E%3C/svg%3E%0A") !important;
+                    background-image: url("data:image/svg+xml,%3C%3Fxml version='1.0'%3F%3E%3Csvg xmlns='http://www.w3.org/2000/svg' enable-background='new 0 0 515.556 515.556' height='512px' viewBox='0 0 515.556 515.556' width='512px' class=''%3E%3Cg%3E%3Cpath d='m0 274.226 176.549 176.886 339.007-338.672-48.67-47.997-290.337 290-128.553-128.552z' data-original='var(--button--text-hover)' class='active-path' data-old_color='var(--button--text-hover)' fill='var(--button--text-hover)'/%3E%3C/g%3E%3C/svg%3E%0A") !important;
                     border-color: var(--button--border-hover) !important;
                     background-color: var(--button--background-hover) !important;
                     color: var(--button--text-hover) !important;
