--- a/source/styles/dc/_theme.scss
+++ b/source/styles/dc/_theme.scss
@@ -123,3 +123,10 @@
 	color: var(--theme--text);
 }
 
+
+/* selection colors */
+// *::selection {
+//     background: var(--theme--text-2);
+//     color: var(--theme--background-2);
+// }
+
