Finalised and cleaned up code for Undercoat v2

--- a/source/styles/base/_mixins.scss
+++ b/source/styles/base/_mixins.scss
@@ -107,10 +107,10 @@
     position: relative !important;
     padding: 0.75em 1.5em !important;
     justify-content: center !important;
-    border: var(--button--border-width) solid var(--swatch--medium) !important;
+    border: var(--button--border-width) solid var(--swatch--medium-1) !important;
     border-radius: var(--button--radius) !important;
     background-color: transparent !important;
-    color: var(--theme--text) !important;
+    color: var(--theme--text-1) !important;
     font-weight: var(--button--font-weight) !important;
     line-height: var(--button--line-height) !important;
     text-decoration: none !important;
