--- a/source/styles/dc/_responsive.scss
+++ b/source/styles/dc/_responsive.scss
@@ -12,6 +12,7 @@
 $adaptive-sizes: (
 	"0-125rem": (max: 0.125rem, min: 0.125rem),
 	"0-25rem": (max: 0.25rem, min: 0.245rem),
+	"0-375rem": (max: 0.375rem, min: 0.36rem),
 	"0-5rem": (max: 0.5rem, min: 0.48rem),
 	"0-75rem": (max: 0.75rem, min: 0.705rem),
 	"1rem": (max: 1rem, min: 0.92rem),
@@ -61,6 +62,6 @@ $breakpoint-max: 90rem; // Equivalent to 1440px
 :root {
 	--navbar--height: clamp(4rem, 3.7143rem + 1.4286vw, 5rem);
 	--site--margin: clamp(1rem, 0.4286rem + 2.8571vw, 3rem);
-	// --site--gutter: clamp(1rem, 0.714rem + 1.429vw, 2rem);
+	--site--gutter: clamp(1rem, 0.714rem + 1.429vw, 2rem);
 	--card--padding: clamp(1rem, 0.7857rem + 1.0714vw, 1.75rem);
 }
