--- a/source/styles/dc/_theme.scss
+++ b/source/styles/dc/_theme.scss
@@ -5,12 +5,12 @@
 :root,
 [data-theme="light"],
 [data-theme="dark"] [data-theme="invert"] {
-	--theme--background: var(--swatch--light-3);
+	--theme--background-1: var(--swatch--light-3);
     --theme--background-2: var(--swatch--light-2);
 	--theme--background-3: var(--swatch--light-1);
-	--theme--text: var(--swatch--dark-4);
+	--theme--text-1: var(--swatch--dark-4);
     --theme--text-2: var(--swatch--dark-1);
-	--theme--border: var(--swatch--medium-4);
+	--theme--border-1: var(--swatch--medium-4);
 	--theme--border-2: var(--swatch--medium-3);
 	/* button solid */
 	--button--background: var(--swatch--brand);
@@ -39,9 +39,6 @@
 		}
 
 		&:hover {
-			// .navbar_menu_icon {
-			// 	color: var(--button--background-hover);
-			// }
 			#ldt-line {
 				opacity: 0;
 			}
@@ -55,12 +52,12 @@
 [data-theme="dark"],
 [data-theme="invert"],
 [data-theme="light"] [data-theme="invert"] {
-    --theme--background: var(--swatch--dark-1);
+    --theme--background-1: var(--swatch--dark-1);
     --theme--background-2: var(--swatch--dark-2);
 	--theme--background-3: var(--swatch--dark-3);
-	--theme--text: var(--swatch--light-4);
+	--theme--text-1: var(--swatch--light-4);
 	--theme--text-2: var(--swatch--light-1);
-	--theme--border: var(--swatch--medium-4);
+	--theme--border-1: var(--swatch--medium-4);
 	--theme--border-2: var(--swatch--medium-3);
 	/* button solid */
 	--button--background: var(--swatch--brand);
@@ -92,9 +89,6 @@
 		}
 
 		&:hover {
-			// .navbar_menu_icon {
-			// 	color: var(--button--background-hover);
-			// }
 			#ldt-line {
 				opacity: 1;
 			}
@@ -120,14 +114,6 @@
 }
 /* apply colors */
 :is(c, :where([data-theme]:not([data-theme="inherit"]))) {
-	background-color: var(--theme--background);
-	color: var(--theme--text);
+	background-color: var(--theme--background-1);
+	color: var(--theme--text-1);
 }
-
-
-/* selection colors */
-// *::selection {
-//     background: var(--theme--text-2);
-//     color: var(--theme--background-2);
-// }
-
