--- a/source/styles/iubenda/_iubenda-dc-custom-v8.scss
+++ b/source/styles/iubenda/_iubenda-dc-custom-v8.scss
@@ -4,7 +4,7 @@
 /* == DC Style Iubenda Settings == */
 
 :root {
-    --iub-border: var(--border-width--main) solid var(--theme--border);
+    --iub-border: var(--border-width--main) solid var(--theme--border-1);
 }
 
 /* Fix for iubenda footer link svg */
@@ -27,7 +27,7 @@
 .iubenda-cs-content,
 .iubenda-tp-btn {
     background-color: var(--theme--background-3);
-    box-shadow: 0 0 12px 0 var(--theme--border);
+    box-shadow: 0 0 12px 0 var(--theme--border-1);
     border: var(--iub-border) !important;
 }
 
@@ -113,7 +113,7 @@
         // flex-basis: 0%;
         // border: 0px none transparent;
         // background-color: transparent;
-        // color: var(--swatch--medium);
+        // color: var(--swatch--medium-1);
         // font-size: var(--iubenda--font-size) !important;
         // font-weight: var(--button--font-weight);
         // text-align: center;
@@ -151,7 +151,7 @@
     }
 
     .purposes-content {
-        color: var(--theme--text) !important;
+        color: var(--theme--text-1) !important;
     }
 
     padding: var(--padding-horizontal--main) !important;
@@ -192,7 +192,7 @@
     .purposes-content,
     .iubenda-iframe-footer,
     .iub-consent-buttons {
-        background-color: var(--theme--background) !important;
+        background-color: var(--theme--background-1) !important;
     }
 
     /* iFrame Preferences Overlay Background */
@@ -202,16 +202,16 @@
 
     /* iFrame Shadows */
     #purposes-content-container .purposes-item .purposes-item-header {
-        background: var(--theme--background) !important;
+        background: var(--theme--background-1) !important;
         // background: linear-gradient(0deg,rgba(255,255,255,0) 0,#fff 15%)!important;
     }
 
     .iubenda-modal-navigation:not(.iubenda-modal-navigation-brand) {
-        box-shadow: 0 18px 10px -8px var(--theme--background) !important;
+        box-shadow: 0 18px 10px -8px var(--theme--background-1) !important;
     }
 
     .iubenda-iframe-footer {
-        box-shadow: 0 -18px 10px -8px var(--theme--background) !important;
+        box-shadow: 0 -18px 10px -8px var(--theme--background-1) !important;
     }
 
     /* iFrame Borders */
@@ -223,7 +223,7 @@
 
     /* iFrame Toggle switches */
     .iub-toggle-checkbox input.style1 {
-        background-color: var(--swatch--medium) !important;
+        background-color: var(--swatch--medium-1) !important;
 
         &:checked {
             background-color: var(--swatch--process--success) !important;
@@ -349,7 +349,7 @@
 
             .purposes-item-body,
             .purposes-item-title .purposes-item-title-btn {
-                color: var(--theme--text) !important;
+                color: var(--theme--text-1) !important;
             }
         }
     }
