--- a/source/styles/iubenda/_iubenda-dc-custom-v8.scss
+++ b/source/styles/iubenda/_iubenda-dc-custom-v8.scss
@@ -21,6 +21,7 @@
 /* Banner full screen wrapper */
 .iubenda-cs-default-floating {
     background-color: transparent;
+    padding: var(--iubenda--banner-margin);
 }
 
 /* Banner & Floating preferences button surface */
@@ -35,7 +36,7 @@
 /* Banner wrapper */
 .iubenda-cs-content {
     max-width: 20rem;
-    margin: var(--iubenda--banner-margin);
+    // margin: var(--iubenda--banner-margin);
     padding: var(--card--padding);
     border-radius: var(--radius--small);
 
